--- a/src/Viettut/Bundles/WebBundle/Resources/views/Authen/register.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Authen/register.html.twig
@@ -27,13 +27,6 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="name" class="col-md-3 control-label">Name</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" name="name" placeholder="Name" ng-model="name">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
                             <label for="username" class="col-md-3 control-label">Username</label>
                             <div class="col-md-9">
                                 <input type="text" class="form-control" name="username" placeholder="Username" required ng-model="username">
@@ -51,6 +44,19 @@
                             <label for="password" class="col-md-3 control-label">Retype Password</label>
                             <div class="col-md-9">
                                 <input type="password" class="form-control" name="password_retype" placeholder="Password" required ng-model="password_retype">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="name" class="col-md-3 control-label">Name</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" name="name" placeholder="Name" ng-model="name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="name" class="col-md-3 control-label">Professional</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" name="name" placeholder="Name" ng-model="professional">
                             </div>
                         </div>
 
