--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -55,47 +55,47 @@
                                 <div class="row col-md-12">
                                     <div class="post-block post-comments clearfix row col-md-12">
                                         <h3><i class="fa fa-comments"></i>Comments ({{ course.comments | length }})</h3>
-                                        {#<ul class="comments" ng-hide="commentToggle">#}
-                                            {#{% for comment in course.comments %}#}
-                                                {#<li>#}
-                                                    {#<div class="comment">#}
-                                                        {#<div class="img-thumbnail">#}
-                                                            {#<img class="avatar" alt="" src="{{ comment.author.avatar }}">#}
-                                                        {#</div>#}
-                                                        {#<div class="comment-block">#}
-                                                            {#<div class="comment-arrow"></div>#}
-                                                                {#<span class="comment-by">#}
-                                                                    {#<strong>{{ comment.author.username }}</strong>#}
-                                                                    {#<span class="pull-right">#}
-                                                                        {#<span> <a href="#"><i class="fa fa-reply"></i> Reply</a></span>#}
-                                                                    {#</span>#}
-                                                                {#</span>#}
-                                                            {#<p>{{ comment.content }}</p>#}
-                                                            {#<span class="date pull-right">{{ comment.createdAt | date('h:M d/m/Y') }}</span>#}
-                                                        {#</div>#}
-                                                    {#</div>#}
-                                                    {#<ul class="comments reply">#}
-                                                        {#<li>#}
-                                                            {#{% for reply in comment.replies %}#}
-                                                                {#<div class="comment">#}
-                                                                    {#<div class="img-thumbnail">#}
-                                                                        {#<img class="avatar" alt="" src="{{ reply.author.avatar }}">#}
-                                                                    {#</div>#}
-                                                                    {#<div class="comment-block">#}
-                                                                        {#<div class="comment-arrow"></div>#}
-                                                                            {#<span class="comment-by">#}
-                                                                                {#<strong>{{ reply.author.username }}</strong>#}
-                                                                            {#</span>#}
-                                                                        {#<p>{{ reply.content }}</p>#}
-                                                                        {#<span class="date pull-right">{{ reply.createdAt | date('h:M d/m/Y') }}</span>#}
-                                                                    {#</div>#}
-                                                                {#</div>#}
-                                                            {#{% endfor %}#}
-                                                        {#</li>#}
-                                                    {#</ul>#}
-                                                {#</li>#}
-                                            {#{% endfor %}#}
-                                            {#</ul>#}
+                                        <ul class="comments" ng-hide="commentToggle">
+                                            {% for comment in course.comments %}
+                                                <li>
+                                                    <div class="comment">
+                                                        <div class="img-thumbnail">
+                                                            <img class="avatar" alt="" src="{{ comment.author.avatar }}">
+                                                        </div>
+                                                        <div class="comment-block">
+                                                            <div class="comment-arrow"></div>
+                                                                <span class="comment-by">
+                                                                    <strong>{{ comment.author.username }}</strong>
+                                                                    <span class="pull-right">
+                                                                        <span> <a href="#"><i class="fa fa-reply"></i> Reply</a></span>
+                                                                    </span>
+                                                                </span>
+                                                            <p>{{ comment.content }}</p>
+                                                            <span class="date pull-right">{{ comment.createdAt | date('h:M d/m/Y') }}</span>
+                                                        </div>
+                                                    </div>
+                                                    <ul class="comments reply">
+                                                        <li>
+                                                            {% for reply in comment.replies %}
+                                                                <div class="comment">
+                                                                    <div class="img-thumbnail">
+                                                                        <img class="avatar" alt="" src="{{ reply.author.avatar }}">
+                                                                    </div>
+                                                                    <div class="comment-block">
+                                                                        <div class="comment-arrow"></div>
+                                                                            <span class="comment-by">
+                                                                                <strong>{{ reply.author.username }}</strong>
+                                                                            </span>
+                                                                        <p>{{ reply.content }}</p>
+                                                                        <span class="date pull-right">{{ reply.createdAt | date('h:M d/m/Y') }}</span>
+                                                                    </div>
+                                                                </div>
+                                                            {% endfor %}
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            {% endfor %}
+                                            </ul>
                                         <ul class="comments">
                                             <li ng-repeat="comment in comments">
                                                 <div class="comment">
