--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
@@ -89,13 +89,13 @@
                                     <li>
                                         <div class="post-image">
                                             <div class="img-thumbnail">
-                                                <a href="blog-post.html">
+                                                <a href="#">
                                                     <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="post-info">
-                                            <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
+                                            <a href="#">Nullam Vitae Nibh Un Odiosters</a>
                                             <div class="post-meta">
                                                 Jan 10, 2013
                                             </div>
@@ -104,13 +104,13 @@
                                     <li>
                                         <div class="post-image">
                                             <div class="img-thumbnail">
-                                                <a href="blog-post.html">
+                                                <a href="#">
                                                     <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }} " alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="post-info">
-                                            <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
+                                            <a href="#">Vitae Nibh Un Odiosters</a>
                                             <div class="post-meta">
                                                 Jan 10, 2013
                                             </div>
@@ -119,13 +119,13 @@
                                     <li>
                                         <div class="post-image">
                                             <div class="img-thumbnail">
-                                                <a href="blog-post.html">
+                                                <a href="#">
                                                     <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="post-info">
-                                            <a href="blog-post.html">Odiosters Nullam Vitae</a>
+                                            <a href="#">Odiosters Nullam Vitae</a>
                                             <div class="post-meta">
                                                 Jan 10, 2013
                                             </div>
@@ -138,13 +138,13 @@
                                     <li>
                                         <div class="post-image">
                                             <div class="img-thumbnail">
-                                                <a href="blog-post.html">
+                                                <a href="#">
                                                     <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }}" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="post-info">
-                                            <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
+                                            <a href="#">Vitae Nibh Un Odiosters</a>
                                             <div class="post-meta">
                                                 Jan 10, 2013
                                             </div>
@@ -153,13 +153,13 @@
                                     <li>
                                         <div class="post-image">
                                             <div class="img-thumbnail">
-                                                <a href="blog-post.html">
+                                                <a href="#">
                                                     <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="post-info">
-                                            <a href="blog-post.html">Odiosters Nullam Vitae</a>
+                                            <a href="#">Odiosters Nullam Vitae</a>
                                             <div class="post-meta">
                                                 Jan 10, 2013
                                             </div>
@@ -168,13 +168,13 @@
                                     <li>
                                         <div class="post-image">
                                             <div class="img-thumbnail">
-                                                <a href="blog-post.html">
+                                                <a href="#">
                                                     <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="post-info">
-                                            <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
+                                            <a href="#">Nullam Vitae Nibh Un Odiosters</a>
                                             <div class="post-meta">
                                                 Jan 10, 2013
                                             </div>
