--- a/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
@@ -12,35 +12,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
-                    <h1>Introducing the new <strong>product</strong>.</h1>
+                    <h1><strong>ViettuT</strong> acadamy.</h1>
                     <p class="lead">
-                        The fastest way to grow your business with the leader in <em>Technology</em>
-                        <span>Check out our options and features included.</span>
+                        Học lập trình từ cơ bản đến nâng cao thông qua các ví dụ thực tế kèm theo <bold>mã nguồn</bold> và các bài <em>test</em>.
+                        <br>
+                        <span>Các khóa học bao gồm nhưng <em>ngôn ngữ</em> và <em>framework</em> thông dụng nhất.</span>
                     </p>
-                    <a href="#" class="btn btn-default btn-lg push-bottom">Buy Now!</a> <span class="arrow hlt" style="top: 10px;"></span>
+                    <a href="{{ path('register_page') }}" class="btn btn-default btn-lg push-bottom">Đăng Ký</a> <span class="arrow hlt" style="top: 10px;"></span>
                 </div>
-                <div class="col-sm-5">
-                    <img class="pull-right responsive" alt="" src="{{ asset('bundles/viettutweb/img/custom-header.png') }}">
-                </div>
+                {#<div class="col-sm-5">#}
+                    {#<img class="pull-right responsive" alt="" src="{{ asset('bundles/viettutweb/img/custom-header.png') }}">#}
+                {#</div>#}
             </div>
         </div>
     </section>
 
     <div class="container">
-        <div class="row center">
-            <div class="col-md-12">
-                <h1 class="short word-rotator-title">
-                    Porto is
-                    <strong class="inverted">
-                        extremely
-                    </strong>
-                    beautiful and fully responsive.
-                </h1>
-                <p class="featured lead">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo. vamus suscipit molestie vestibulum.
-                </p>
-            </div>
-        </div>
+        {#<div class="row center">#}
+            {#<div class="col-md-12">#}
+                {#<h1 class="short word-rotator-title">#}
+                    {#Porto is#}
+                    {#<strong class="inverted">#}
+                        {#extremely#}
+                    {#</strong>#}
+                    {#beautiful and fully responsive.#}
+                {#</h1>#}
+                {#<p class="featured lead">#}
+                    {#Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo. vamus suscipit molestie vestibulum.#}
+                {#</p>#}
+            {#</div>#}
+        {#</div>#}
 
         <div class="row push-top">
             <div class="col-md-4">
