--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,47 +15,12 @@
     <!-- Web Fonts  -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">
 
-    <!-- Vendor CSS -->
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/bootstrap/bootstrap.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/ladda/dist/ladda.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/highlightjs/styles/github.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/angular-bootstrap/ui-bootstrap-csp.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/ng-tags-input/ng-tags-input.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/bower_components/angular-tags/dist/angular-tags-0.2.10.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/fontawesome/css/font-awesome.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/owlcarousel/owl.carousel.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/owlcarousel/owl.theme.default.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/magnific-popup/magnific-popup.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/markdown-editpreview-ng.js/lib/codemwnci/bootstrap-markdown.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}">
 
-    <!-- Theme CSS -->
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/css/theme.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/css/theme-elements.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/css/theme-blog.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/css/theme-animate.css') }}">
-
-    <!-- Current Page CSS -->
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/rs-plugin/css/settings.css') }}" media="screen">
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/vendor/circle-flip-slideshow/css/component.css') }}" media="screen">
-
-    <!-- Skin CSS -->
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/css/skins/default.css') }}">
-
-    <!-- Theme Custom CSS -->
-    <link rel="stylesheet" href="{{ asset('bundles/viettutweb/css/custom.css') }}">
-
-    <!-- Head Libs -->
-    <script src="{{ asset('bundles/viettutweb/vendor/modernizr/modernizr.js') }}"></script>
 
     <!--[if IE]>
     <script src="{{ asset('bundles/viettutweb/css/ie.css') }}"></script>
     <![endif]-->
-
-    <!--[if lte IE 8]>
-    <script src="{{ asset('bundles/viettutweb/vendor/respond/respond.js') }}"></script>
-    <script src="{{ asset('bundles/viettutweb/vendor/excanvas/excanvas.js') }}"></script>
-    <![endif]-->
-
 </head>
 <body ng-app="viettut">
 <div class="body">
@@ -63,11 +28,11 @@
         <div class="container">
             <div class="logo">
                 <a href="{{ path('home_page') }}">
-                    <img alt="Porto" width="111" height="54" data-sticky-width="82" data-sticky-height="40" src="{{ asset('bundles/viettutweb/img/logo.png') }}">
+                    <img alt="Porto" width="111" height="54" data-sticky-width="82" data-sticky-height="40" src="{{ asset('bundles/viettutweb/img/viettut.png') }}">
                 </a>
             </div>
             <div class="search">
-                <form id="searchForm" action="page-search-results.html" method="get">
+                <form id="searchForm" method="get">
                     <div class="input-group">
                         <input type="text" class="form-control search" name="q" id="q" placeholder="Search..." required>
 								<span class="input-group-btn">
@@ -79,10 +44,10 @@
             <nav>
                 <ul class="nav nav-pills nav-top">
                     <li>
-                        <a href="about-us.html"><i class="fa fa-angle-right"></i>About Us</a>
+                        <a href="#"><i class="fa fa-angle-right"></i>About Us</a>
                     </li>
                     <li>
-                        <a href="contact-us.html"><i class="fa fa-angle-right"></i>Contact Us</a>
+                        <a href="#"><i class="fa fa-angle-right"></i>Contact Us</a>
                     </li>
                     <li class="phone">
                         <span><i class="fa fa-phone"></i>(123) 456-7890</span>
@@ -135,8 +100,8 @@
                                 <i class="fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="page-custom-header.html">All challenges</a></li>
-                                <li><a href="page-team.html">Search</a></li>
+                                <li><a href="#">All challenges</a></li>
+                                <li><a href="#">Search</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
@@ -161,9 +126,12 @@
                                             <div class="col-md-8">
                                                 <div class="user-avatar">
                                                     <div class="img-thumbnail">
-                                                        <img src="{{ asset('bundles/viettutweb/img/clients/client-1.jpg') }}" alt="">
+                                                        <img alt="avatar" ng-src="<{ avatar }>">
                                                     </div>
-                                                    <p><strong>John Smith</strong><span>CEO & Founder - Okler</span></p>
+                                                    <p>
+                                                        <strong><{ username }></strong>
+                                                        <span><{ professional }></span>
+                                                    </p>
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
@@ -212,7 +180,7 @@
 
                         <div class="alert alert-danger hidden" id="newsletterError"></div>
 
-                        <form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST">
+                        <form id="newsletterForm" method="POST">
                             <div class="input-group">
                                 <input class="form-control" placeholder="Email Address" name="newsletterEmail" id="newsletterEmail" type="text">
 										<span class="input-group-btn">
@@ -230,11 +198,11 @@
                 </div>
                 <div class="col-md-4">
                     <div class="contact-details">
-                        <h4>Contact Us</h4>
+                        <h4>Liên Hệ</h4>
                         <ul class="contact">
-                            <li><p><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</p></li>
+                            {#<li><p><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</p></li>#}
                             <li><p><i class="fa fa-phone"></i> <strong>Phone:</strong> (123) 456-7890</p></li>
-                            <li><p><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a></p></li>
+                            <li><p><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:support@viettut.com">support@viettut.com</a></p></li>
                         </ul>
                     </div>
                 </div>
@@ -254,8 +222,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-1">
-                        <a href="index.html" class="logo">
-                            <img alt="Porto Website Template" class="img-responsive" src="{{ asset('bundles/viettutweb/img/logo-footer.png') }}">
+                        <a href="{{ path('home_page') }}" class="logo">
+                            <img alt="ViettuT academy" class="img-responsive" src="{{ asset('bundles/viettutweb/img/viettut-dark.png') }}">
                         </a>
                     </div>
                     <div class="col-md-7">
@@ -264,9 +232,9 @@
                     <div class="col-md-4">
                         <nav id="sub-menu">
                             <ul>
-                                <li><a href="page-faq.html">FAQ's</a></li>
-                                <li><a href="sitemap.html">Sitemap</a></li>
-                                <li><a href="contact-us.html">Contact</a></li>
+                                <li><a href="#">FAQ's</a></li>
+                                <li><a href="#">Sitemap</a></li>
+                                <li><a href="#">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -275,44 +243,7 @@
         </div>
     </footer>
 </div>
-<script src="{{ asset('bundles/viettutweb/bower_components/jquery/dist/jquery.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular/angular.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular-ui-router/release/angular-ui-router.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ng-tags-input/ng-tags-input.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular-bootstrap/ui-bootstrap.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular-animate/angular-animate.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular-sanitize/angular-sanitize.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/wiz-markdown/wizMarkdown/wizMarkdown.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ng-file-upload/ng-file-upload.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ngprogress/build/ngprogress.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/satellizer/satellizer.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angularUtils-pagination/dirPagination.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/highlightjs/highlight.pack.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ngstorage/ngStorage.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ladda/dist/spin.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ladda/dist/ladda.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/ladda-angular/dist/ladda-angular.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular-isotope/demo/scripts/vendor/jquery.isotope.min.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/bower_components/angular-isotope/dist/angular-isotope.min.js') }}"></script>
-
-<script src="{{ asset('bundles/viettutweb/js/app.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/js/controller/login.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/js/controller/register.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/js/controller/navbar.js') }}"></script>
-
-<!-- Vendor -->
-<script src="{{ asset('bundles/viettutweb/vendor/jquery.appear/jquery.appear.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/vendor/jquery.easing/jquery.easing.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/vendor/common/common.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/vendor/isotope/jquery.isotope.js') }}"></script>
-
-<!-- Theme Base, Components and Settings -->
-<script src="{{ asset('bundles/viettutweb/js/theme.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/js/theme.init.js') }}"></script>
-<script src="{{ asset('bundles/viettutweb/js/custom.js') }}"></script>
+<script src="{{ asset('js/app.min.js') }}"></script>
 {% block custom %}{% endblock %}
 </body>
 </html>
