--- a/src/Viettut/Bundles/WebBundle/Resources/views/Authen/login.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Authen/login.html.twig
@@ -17,30 +17,43 @@
                     <form class="form-horizontal" role="form">
 
                         <div style="margin-bottom: 25px" class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-user"></i></span>
                             <input id="login-username" type="text" class="form-control" name="username" ng-model="username" placeholder="username" required>
                         </div>
 
                         <div style="margin-bottom: 25px" class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
                             <input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="password" required>
                         </div>
 
-                        <div class="input-group">
-                            <div class="checkbox">
-                                <label>
-                                    <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
-                                </label>
-                            </div>
-                        </div>
+                        {#<div class="input-group">#}
+                            {#<div class="checkbox">#}
+                                {#<label>#}
+                                    {#<input id="login-remember" type="checkbox" name="remember" value="1"> Remember me#}
+                                {#</label>#}
+                            {#</div>#}
+                        {#</div>#}
 
                         <div style="margin-top:10px" class="form-group">
-                            <div class="col-sm-12 controls">
+                            <div class="col-sm-4">&nbsp;</div>
+                            <div class="col-sm-4 controls">
                                 <button ladda-button="laddaLoading" data-style="slide-right" ng-click="login()" class="ladda-button btn-primary" style="border-radius: 5px;">Login </button>
-                                <button ng-click="socialLogin('facebook')" class="ladda-button btn-primary" style="border-radius: 5px;">Login with Facebook</button>
+                                {#<a href="{{ facebook_login_url }}" class="ladda-button btn-primary" style="border-radius: 5px;">Login with Facebook</a>#}
+                                {#<button ng-click="socialLogin('facebook')" class="ladda-button btn-primary" style="border-radius: 5px;">Login with Facebook</button>#}
+                                {#<button ng-click="socialLogin('google')" class="ladda-button btn-primary" style="border-radius: 5px;">Login with Google</button>#}
+                                 Or
                             </div>
+                            <div class="col-sm-4">&nbsp;</div>
                         </div>
-
+                        <div style="margin-top:10px" class="form-group">
+                            <div class="col-sm-4">&nbsp;</div>
+                            <div class="col-sm-4 controls" style="border-top: 1px solid#888; padding-top:15px;">
+                                <button ng-click="socialLogin('facebook')" class="fa fa-facebook fa-2x" title="Login with Facebook" style="margin-right:8px;"></button>
+                                <button ng-click="socialLogin('google')" class="fa fa-google-plus-square fa-2x" title="Login with Google" style="margin-right:8px;"></button>
+                                <button ng-click="socialLogin('github')" class="fa fa-github-alt fa-2x" title="Login with Github"></button>
+                            </div>
+                            <div class="col-sm-4">&nbsp;</div>
+                        </div>
 
                         <div class="form-group">
                             <div class="col-md-12 control">
