change table name

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,6 @@
 
     <link rel="stylesheet" href="{{ asset('css/main.css') }}">
 
-
     <!--[if IE]>
     <script src="{{ asset('bundles/viettutweb/css/ie.css') }}"></script>
     <![endif]-->
@@ -74,7 +73,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ path('course_index') }}">All courses</a></li>
-                                <li><a href="{{ path('viettut_bundles_web_course_create') }}#my-course">Create a course <span class="tip">hot</span></a></li>
+                                <li><a href="{{ path('viettut_bundles_web_course_create') }}">Create a course <span class="tip">hot</span></a></li>
                                 <li><a href="#">Search</a></li>
                             </ul>
                         </li>
