complete tag_index and lecturer_index

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -73,7 +73,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ path('course_index') }}">All courses</a></li>
-                                <li><a href="{{ path('viettut_bundles_web_course_create') }}">Create a course <span class="tip">hot</span></a></li>
+                                <li><a href="{{ path('create_course') }}">Create a course <span class="tip">hot</span></a></li>
                                 <li><a href="#">Search</a></li>
                             </ul>
                         </li>
