--- a/src/Viettut/Bundles/WebBundle/Resources/views/Tag/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Tag/index.html.twig
@@ -6,13 +6,13 @@
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ path('home_page') }}">Home</a></li>
-                        <li class="active"><a href="#">Lecturers</a></li>
+                        <li class="active"><a href="#">Tags</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h1>{{ lecturer }}</h1>
+                    <h1>{{ tag }}</h1>
                 </div>
             </div>
         </div>
