--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -39,10 +39,10 @@
                             <div class="post-content">
                                 <h2 class="text-center"><a href="#">{{ course.title }}</a></h2>
                                 <div class="post-meta">
-                                    <span><i class="fa fa-user"></i> By <a href="#">{{ course.author.username }}</a> </span>
+                                    <span><i class="fa fa-user"></i> By <a href="{{ path('lecturer_index', {'username' : course.author.username}) }}">{{ course.author.username }}</a> </span>
                                     <span><i class="fa fa-tag"></i>
                                         {% for t in course.courseTags %}
-                                            <a href="#">{{ t.tag.text }}</a>
+                                            <a href="{{ path('tag_index', {'tag' : t.tag.text}) }}">{{ t.tag.text }}</a>
                                         {% endfor %}
                                     </span>
                                     <span><i class="fa fa-comments"></i> <a href="#">{{ course.comments | length }} Comments</a></span>
